# im2model_app

./: .README.md.swp  .bettercodehub.yml  .gitignore  .gitmodules  :x  CELSLC_used.cif  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  im2model.qrc
_install/: CELSLC_used.cif  cel_slc.prm  temporary_msa_im2model.prm  temporary_wavimg_im2model.prm  test.prm  test_im2model.cel
assets/drprobe_clt_bin_linuxx64/: celslc  msa.prm
assets/drprobe_clt_bin_winx64/: License.rtf
build-im2model_gui-Desktop_Qt_5_8_0_clang_64bit-Debug/: moc_configwin.cpp  ui_configwin.h
cmake/: QtCommon.cmake
im2modelpy_api/: Dockerfile  app.py  dat.py  database.py  requirements.txt  schema.py  supervisord.conf  test.py
im2modelpy_api/data/: cellsdb.sqlite3  tdmapsdb.sqlite3
im2modelpy_api/templates/: upload_cif.html
simulation/cif/: .CeO2.cif.swp  Calcite_rhom.cif  CeO2_cub.cif  Fe3O4.cif  FeMnTiO_occ.cif  GaAs_hex.cif  GaN_hex.cif  MoS2.cif  MoS2_hex.cif  NbBr5_tri.cif  Ni.cif  S_ortho.cif  Si_cub.cif  SnO2_tet.cif  Ti02.cif  ZrO2_cub.cif  ZrO2_mono.cif  ZrO2_tet.cif  cif2.py  cif_py.py
simulation/dr_probe_bin/drprobe_clt_bin_linuxx64/: BuildCell  CellMuncher  License.txt  celslc  celslc howto.txt  msa  msa howto.txt  wavimg  wavimg howto.txt
simulation/dr_probe_bin/drprobe_clt_bin_osx/: celslc  celslc howto.txt  detectors.prm  msa  msa howto.txt  wavimg
simulation/dr_probe_bin/drprobe_clt_bin_winx64/: MTF-US2k-300.mtf  celslc howto.txt  msa howto.txt  titan2048.mtf
simulation/emd/: STEM_2016-12-07_14h43m22s.emd
simulation/prm/: msa.prm  msa_119.prm  msa_119_im2model.prm  wavimg.prm  wavimg_112_def_0.prm  wavimg_112_def_10.prm  wavimg_40_def_0.prm  wavimg_40_def_10.prm  wavimg_80_def_0.prm  wavimg_80_def_10.prm
simulation/tif/: 4_SnO2_0.0288nm.tif
simulation_outputs/: CELSLC_used.cif  CeO2_example_b.im2model
src/: .celslc_prm.cpp.swp  .im2model.cpp.swp  .simgrid_steplength.cpp.swp  .symbcalc.cpp.swp  CELSLC_used.cel  CMakeLists.txt  CopyFile.cmake  QtAwesome.cpp  QtAwesomeAnim.cpp  QtAwesomeAnim.h  application_log.cpp  application_log.hpp  atom.cpp  atom.hpp  atom_info.cpp  atom_info.hpp  base_bin.cpp  base_bin.hpp  base_cell.cpp  base_cell.hpp  base_crystal.cpp  base_crystal.hpp  base_image.cpp  base_image.hpp  base_logger.cpp  base_logger.hpp  camera.cpp  camera.hpp  celslc_prm.cpp  celslc_prm.h  celslc_prm.hpp  chem_database.cpp  chem_database.hpp  configwin.cpp  configwin.cpp.autosave  configwin.h  configwin.ui  configwin.ui.autosave  custom_tool_button.cpp  custom_tool_button.h  (+129 more)
src/cmake/: QtCommon.cmake
src/core/: CMakeLists.txt  atom_info.cpp  atom_info.hpp  celslc_prm.hpp  chem_database.cpp  chem_database.hpp  mc_driver.cpp  mc_parser.yy  simgrid_steplength.hpp  super_cell.cpp  super_cell.hpp  unit_cell.cpp  unit_cell.hpp
src/deprecated/: image_crystal.cpp  image_crystal.hpp
src/gui/: CMakeLists.txt
src/res/: AppIcon.icns
src/shaders/: cube.f.glsl  cube.v.glsl
src/vis/: CMakeLists.txt  camera.cpp  cell_view_widget.cpp  cell_view_widget.h  opengl.hpp  program.hpp  texture_image.cpp  texture_image.h  unit_cell_view_widget.cpp  unit_cell_view_widget.h
src/vis/components/: editorutils.cpp  editorutils.h  qdummyobjectpicker.cpp  qdummyobjectpicker.h
src/vis/inputcontrols/: qtrackballcameracontroller.cpp  qtrackballcameracontroller.h  qtrackballcameracontroller_p.cpp  qtrackballcameracontroller_p.h
src_win32/: CMakeLists.txt  main.cxx
test/: CMakeLists.txt  test_intensity_columns.cpp
